review bart + vincent (ook een kleine Ethymologsche uitweiding over indo-europese talen ingevoegd...)

--- a/kinematica/1dim_ERB.tex
+++ b/kinematica/1dim_ERB.tex
@@ -10,7 +10,11 @@
 
 
 
-Een eenvoudige beweging om te bestuderen is de \emph{eenparig rechtlijnige beweging} (afgekort ERB). De snelheid van de beweging is eenparig of gelijkmatig verdeeld wat betekent dat de snelheid steeds gelijk blijft. M.a.w. is de snelheid constant en dus de versnelling gelijk aan nul. Aangezien de snelheid niet verandert is de ogenblikkelijke snelheid gelijk aan de gemiddelde snelheid. Met deze observatie kan je eenvoudig een functie opstellen voor de plaatsfunctie van deze beweging:
+Een eenvoudige beweging om te bestuderen is de \emph{eenparig rechtlijnige beweging} (afgekort ERB). 
+De snelheid van de beweging is eenparig\footnote{Van Dale: zonder onderling verschil; gelijk} of gelijkmatig verdeeld wat betekent dat de snelheid steeds gelijk blijft. 
+De snelheid is m.a.w. constant en dus de versnelling gelijk aan nul. 
+Aangezien de snelheid niet verandert is de ogenblikkelijke snelheid gelijk aan de gemiddelde snelheid. 
+Met deze observatie kan je eenvoudig een functie opstellen voor de plaatsfunctie van deze beweging:
 
 \[
 \begin{array}{rcl}
