--- a/kinematica/1dim_verticale_worp.tex
+++ b/kinematica/1dim_verticale_worp.tex
@@ -9,38 +9,60 @@
 
 
 
- In het jaar 1586 stond een wetenschapper uit Brugge op de Nieuwe Kerk van Delft . 
- Onze perceptie leert dat zwaardere lichamen sneller vallen dan lichtere. 
- Een pluim en een steen komen in regel niet op hetzelfde moment op de grond terecht. 
- Toch blijkt deze intuitie niet te kloppen. \href{https://www.canonvanvlaanderen.be/events/simon-stevin/}{Simon Stevin} liet vanop de kerktoren twee loden bollen met een verschillend gewicht vallen en stelde vast dat ze op hetzelfde moment de grond raakten. 
+%  Onze perceptie leert dat zwaardere lichamen sneller vallen dan lichtere. 
+%  Een pluim en een steen komen in regel niet op hetzelfde moment op de grond terecht. 
+%  Toch blijkt deze intuïtie niet te kloppen.
+%  In het jaar 1586 stond een wetenschapper uit Brugge op de Nieuwe Kerk van Delft. 
+%  \href{https://www.canonvanvlaanderen.be/events/simon-stevin/}{Simon Stevin} 
+%  \footnote{Het woord wiskunde vindt zijn ethymologische stam in het Griekse \(\mu \alpha \theta \eta \mu \alpha \tau \iota \kappa \eta\), wat in ons alfabet overeenkomt met \mbox{\textit{math\=ematik\'e}}. Vandaag merk je deze invloed is het Franse \textit{mathématiques}, het Spaanse \textit{matemáticas}, het Turkse \textit{matematik}of het Zweedse \textit{matte}. Dat men in het Nederlandse taalgebied over \textit{wiskunde} spreekt, komt door Simon Stevin.}\footnotemark 
+%  \footnotetext{Het woord fysica vindt zijn etymologische stam in het Griekse \(\phi \upsilon \sigma \iota \kappa \eta\), wat in ons alfabet overeenkomt met \mbox{\textit{physik\=\'e}}. Vandaag merk je deze invloed in het Franse \textit{physique}, het Spaanse \textit{física}, het Turkse \textit{fizik} of het Zweedse \textit{fysik}. Dat men in het Nederlandse taalgebied over de \textit{natuurkunde} spreekt, komt door Simon Stevin.}\footnotemark
+%  \footnotetext{Voor \textit{de kunst van het scheiden} vervolledigt de lezer deze voetnoot zelf... (\mbox{\textit{kh\=em\=i\'a}, chimie, química, kimya, kemi}) }
+%  liet vanop de kerktoren twee loden bollen met een verschillende massa vallen en stelde vast dat ze op hetzelfde moment de grond raakten. 
 	
 
+
+ Onze perceptie leert dat zwaardere lichamen sneller vallen dan lichtere. 
+ Een pluim en een steen komen in regel niet op hetzelfde moment op de grond terecht. 
+ Toch blijkt deze intuïtie niet te kloppen.
+ In het jaar 1586 stond een wetenschapper uit Brugge op de Nieuwe Kerk van Delft. 
+ \href{https://www.canonvanvlaanderen.be/events/simon-stevin/}{Simon Stevin}%
+ \footnote{Het woord \textit{mathematica} vindt zijn etymologische stam in het Griekse 
+ $\mu \alpha \theta \eta \mu \alpha \tau \iota \kappa \eta$, wat in ons alfabet overeenkomt met \textit{math\=ematik\'e}. Vandaag merk je deze invloed in het Franse \textit{mathématiques}, het Spaanse \textit{matemáticas}, het Turkse \textit{matematik} of het Zweedse \textit{matte}. Dat men in het Nederlandse taalgebied over \textit{wiskunde} spreekt, komt door Simon Stevin.\footnotemark}
+ \footnotetext{Het Griekse $\phi \upsilon \sigma \iota \kappa \eta$, wat in ons alfabet overeenkomt met \textit{physik\'e}, is de ethomologische stam van het woord \textit{fysica}. Vandaag merk je deze invloed in het Franse \textit{physique}, het Spaanse \textit{física}, het Turkse \textit{fizik} of het Zweedse \textit{fysik}. Dat men in het Nederlandse taalgebied over de \textit{natuurkunde} spreekt, komt door Simon Stevin.\footnotemark}
+ \footnotetext{Voor \textit{de kunst van het scheiden} vervolledigt de lezer deze voetnoot zelf... (\textit{kh\=em\=i\'a}, chimie, química, kimya, kemi)}
+ 
+ liet vanop de kerktoren twee loden bollen met een verschillende massa vallen en stelde vast dat ze op hetzelfde moment de grond raakten.
+ 
+
+ \begin{image}
+ 
+ \includegraphics[width=0.85\textwidth]{valbeweging_pasco2}
+ \end{image}
+ \captionof{figure}{Experimenteel bekomen grafieken van een verticale worp waarbij de as naar beneden is georiënteerd.}
+
 In vacuüm -- waar voorwerpen geen luchtweerstand ondervinden -- blijkt de massa geen rol te spelen bij de constante versnelling die de voorwerpen krijgen: alle voorwerpen vallen met dezelfde versnelling! 
-Met lode bollen kon Simon Stevin dit effect uitschakelen. 
+Met lode bollen kon Simon Stevin het effect van de luchtweerstand uitschakelen. 
 De theoretische verklaring voor dit experiment hoort thuis in de dynamica. 
 In de kinematica wordt enkel de beweging beschreven. 
 Omdat de valversnelling constant is, heb je hier simpelweg met een EVRB te maken.
 
-\begin{image}
-
-\includegraphics[width=0.85\textwidth]{valbeweging_pasco2}
-\end{image}
-\captionof{figure}{Experimenteel bekomen grafieken van een verticale worp waarbij de as naar beneden is georiënteerd.}
 Strikt genomen verschilt de valversnelling van plaats tot plaats op de aarde, maar voor het gemak nemen wij in vraagstukken de waarde
 \[g=9,81\rm\,m/s^2.\]
-Omdat de verticale worp een EVRB is, kunnen we de formules (\ref{x(t)0}) en (\ref{v(t)0}) gebruiken om een valbeweging te beschrijven. Voor de versnelling $a$ nemen we dan $a=g$ of $a=-g$ al naargelang de oriëntatie van de coördinaatas.
+Omdat de verticale worp een EVRB is, kunnen we de formules voor de plaatsfunctie en snelheidsfunctie gebruiken om een valbeweging te beschrijven. 
+Voor de versnelling $a$ nemen we dan $a=g$ of $a=-g$ al naargelang de oriëntatie van de coördinaatsas.
 
 \begin{quickquestion*}{}{}
 Als je een tennisbal in de lucht gooit, op welk(e) moment(en) is de versnelling \(0\)? Op welk(e) moment(en) is de snelheid \(0\)? 
 \end{quickquestion*}
 
 \begin{quickquestion*}{}{}
-Leg de fysische betekenis uit indien de richting van de snelheidsvector en versnellingsvector tegengesteld zijn. Wat indien ze dezelfde richting hebben?
+Leg de fysische betekenis uit indien de zin van de snelheidsvector en versnellingsvector tegengesteld zijn. Wat indien ze dezelfde zin hebben?
 \end{quickquestion*}
+% volgend jaar hier de afbeelding van de basketbal invoegen 
 
 
 \begin{exercise}
-Simon Stevin laat van de boord van een schip een loden bol in het water vallen. De \mbox{boord} bevindt zich $4,0\rm\,m$ boven het wateroppervlak. De loden bol zinkt vervolgens met de snelheid waarmee hij het water raakte. Er zijn $6,0\rm\,s$ tussen het tijdstip waarop de bol valt en ze de bodem van het water bereikt.
+Simon Stevin laat van de boord van een schip een loden bol in het water vallen. De \mbox{boord} bevindt zich \SI{4}{\meter} boven het wateroppervlak. De loden bol zinkt vervolgens met de snelheid waarmee hij het water raakte. Er zijn \SI{6}{\second} tussen het loslaten van de bol en het raken van de bodem. 
 
 \begin{image}
 	\includegraphics[width=0.4\textwidth]{boordschip}
