--- a/kinematica/exercises/1dim_oef_vraagstukken.tex
+++ b/kinematica/exercises/1dim_oef_vraagstukken.tex
@@ -490,4 +490,34 @@ Welke figuur geeft kwalitatief het verloop van de versnellingscompent van het de
 \end{exercise}
 
 
+% oefeningen ingevoegd die in de theorie stond 
+\begin{exercise}
+
+    Een auto die $\SI{60}{km/h}$ rijdt, raakt een boom; de voorkant van de auto wordt in elkaar gedrukt en de bestuurder komt na $\SI{70}{cm}$ tot stilstand. Welke gemiddelde vertraging onderging de bestuurder tijdens de botsing? Druk je antwoord uit in $g$, waarbij $g=\SI{9,81}{m/s^2}$.
+    % \textit{Gegeven}  $v_0=\SI{16,7}{m/s}$%%%\newline$x=\SI{0,70}{m}$
+    % \textit{Gevraagd} $a$
+    % \textit{Oplossing} 
+    \begin{oplossing} 
+    Om de (constante) vertraging te vinden, hebben we de snelheidsverandering en de benodigde tijd nodig. De verandering in snelheid kennen we; de eindsnelheid van de auto moet nul worden maar de duur is niet onmiddellijk gegeven. Omdat de eindsnelheid nul is, kunnen we wel uit de snelheidsvergelijking van een eenparig veranderlijke beweging een \emph{uitdrukking} vinden voor die tijd die we vervolgens kunnen substitueren in de plaatsvergelijking. De enige onbekende is dan de gezochte versnelling.\footnote{M.b.v. de formule $\overline{v}=\frac{v_0+v}{2}$ voor de gemiddelde snelheid en de definitie voor de gemiddelde snelheid $\overline{v}=\frac{\Delta x}{\Delta t}$ is het antwoord sneller te vinden. Ga maar na \ldots}
+    %%%\newline
+    %%%\newline
+    Uit $v(t)=0$ of $0=v_0+at$ halen we een uitdrukking voor de tijd die nodig is om tot stilstand te komen:
+    \begin{align*}
+    t&=-\frac{v_0}{a}
+    \end{align*}
+    Substitutie van deze tijd in de plaatsfunctie levert:
+    \begin{align*}
+    x&=v_0t+\frac{1}{2}at^2\\
+    &=v_0\left(-\frac{v_0}{a}\right)+\frac{1}{2}a\left(-\frac{v_0}{a}\right)^2\\
+    %&=&-\frac{v_0^2}{a}+\frac{v_0^2}{2a}\\
+    &=-\frac{v_0^2}{2a}\\
+    \end{align*}
+    De versnelling is dan gelijk aan:
+    \begin{align*}
+    a&=-\frac{v_0^2}{2x}
+    \end{align*}
+    Invullen van de gegevens levert $a=\SI{-198}{m/s^2}$, wat gelijk is aan $20g$.
+    \end{oplossing}
+    \end{exercise}
+    
 \end{document}
