--- a/kinematica/1dim_oplossingsstrategie.tex
+++ b/kinematica/1dim_oplossingsstrategie.tex
@@ -14,15 +14,15 @@ Vraagstukken in de kinematica kan je vaak op dezelfde manier banaderen. Elke opg
 \begin{enumerate}
 \item Lees het vraagstuk aandachtig. Zorg dat je duidelijk weet wat er gevraagd wordt. 
 \begin{itemize}
-	\item als je correct de snelheid op \(t_3\) berekent maar de snelheid op \(t_2\) was gevraagd, is dat een jammere fout \ldots 
-	\item als je correct de postitie op \(t_1\) berekent maar de positie op \(t_0\) was gevraagd, is dat een jammere fout \ldots 
+	\item als je correct de snelheid op \(t_3\) berekent, maar de snelheid op \(t_2\) was gevraagd, is dat een jammere fout \ldots 
+	\item als je correct de positie op \(t_1\) berekent, maar de positie op \(t_0\) was gevraagd, is dat een jammere fout \ldots 
 	\item \ldots
 \end{itemize}
-\item Kies het systeem (object, lichaam, massa, geheel van lichamen) waarvan je een onbekende posititie, snelheid of versnelling wilt berekenen. 
+\item Kies het systeem (object, lichaam, massa, geheel van lichamen) waarvan je een onbekende positie, snelheid of versnelling wil berekenen. 
 \item Maak een tekening van dit systeem. Teken een coördinaatsas. 
 \item Bepaal de gegevens uit het vraagstuk. Welke heb je nodig om de oplossing te bepalen? 
-\item Gebruik de bewegingsvergelijkingen voor positie, snelheid en versnelling om het gevraagde te berekenen. 
-\item Heeft je oplossing de juiste eenheiden en grootteorde? De snelheid van een tennisbal in de eenheid \(\frac{s}{m^2}\) is waarschijnlijk fout. Als het enkele minuten duurt voordat de bowlingbal de kegels raakt, heb je waarschijnlijk ergens een (reken)fout gemaakt \ldots 
+\item Gebruik de bewegingsvergelijkingen voor positie, snelheid en versnelling en eventueel ook de geziene definitie- en hulpformules om het gevraagde te berekenen. 
+\item Heeft je oplossing de juiste eenheden en grootteorde? De snelheid van een tennisbal in de eenheid \(\frac{s}{m^2}\) is waarschijnlijk fout. Als het enkele minuten duurt voordat de bowlingbal de kegels raakt, heb je waarschijnlijk ergens een (reken)fout gemaakt \ldots 
 
 \end{enumerate}
 
