--- a/kinematica/1dim_intro.tex
+++ b/kinematica/1dim_intro.tex
@@ -33,7 +33,7 @@
 	Wiskundige variabelen en objecten zoals functies krijgen nu een fysische betekenis.
 	$x(t)$ is dus niets anders dan een functie $f(x)$ of $y(x)$ zoals je die in wiskunde kent.
 	Alleen nemen wij nu niet voor de onafhankelijke variabele het symbool $x$ maar het symbool $t$ omdat het symbool moet staan voor de tijd.
-	En voor het symbool $f$ of \(y\) gebruiken wij nu het symbool $x$ omdat de beeldwaarden van de functie nu als betekenis een positie op een coördinaatsas hebben.
+	En voor het symbool $f$ of \(y\) gebruiken wij nu het symbool $x$ omdat de beeldwaarden van de functie nu als betekenis een positie op een coördinaatsas hebben.}
 	
 	
 \end{document}
