review bart + vincent (ook een kleine Ethymologsche uitweiding over i… (#91)
* review bart + vincent (ook een kleine Ethymologsche uitweiding over indo-europese talen ingevoegd...)

* } sluiten...

--- a/kinematica/1dim_intro.tex
+++ b/kinematica/1dim_intro.tex
@@ -9,11 +9,31 @@
 
 	%% \chapter{Eendimensionale bewegingen}
 
-	Beweging beschrijven is niet zo simpel als het in eerste instantie lijkt. Zo is bijvoorbeeld de beweging van een wolk eerder complex. Wat reken je al dan niet tot de wolk? Ook de bewegingen van de afzonderlijke moleculen in kaart brengen is een onmogelijke opgave omdat het aantal moleculen eerder groot is. Om toch vooruitgang te kunnen boeken, beginnen we met voorwerpen die we als een punt kunnen voorstellen. We maken dan abstractie van de ruimtelijke vorm van het object dat we beschrijven en doen alsof we het kunnen reduceren tot \'e\'en enkele plaats in de ruimte. Zo zouden we het vliegen van een vlieg doorheen de kamer kunnen bekijken als een stipje. Het bewegen van de vleugels of de oriëntatie van de kop van de vlieg laten we dan buiten beschouwing. Ook deze beschrijving kunnen we inperken; we gaan in eerste instantie enkel bewegingen beschrijven die voor te stellen zijn op een rechte lijn. Dit noemen we eendimensionale bewegingen. Als we de beschrijving hiervan eenmaal kennen, kunnen we later dit met behulp van vectoren gemakkelijk uitbreiden naar een beschrijving van bewegingen in twee- of drie dimensies.
+	Beweging beschrijven is niet zo simpel als het in eerste instantie lijkt.
+	Zo is bijvoorbeeld de beweging van een wolk eerder complex.
+	Wat reken je al dan niet tot de wolk? Ook de bewegingen van de afzonderlijke moleculen in kaart brengen is een onmogelijke opgave omdat het aantal moleculen eerder groot is.
+	Om toch vooruitgang te kunnen boeken, beginnen we met voorwerpen die we als een punt kunnen voorstellen.
+	We maken dan abstractie van de ruimtelijke vorm van het object dat we beschrijven en doen alsof we het kunnen reduceren tot één enkele plaats in de ruimte.
+	Zo zouden we het vliegen van een vlieg doorheen de kamer kunnen bekijken als een stipje.
+	Het bewegen van de vleugels of de oriëntatie van de kop van de vlieg laten we dan buiten beschouwing.
+	Ook deze beschrijving kunnen we inperken; we gaan in eerste instantie enkel bewegingen beschrijven die voor te stellen zijn op een rechte lijn.
+	Dit noemen we eendimensionale bewegingen.
+	Als we de beschrijving hiervan eenmaal kennen, kunnen we later dit later gemakkelijk uitbreiden naar een beschrijving van bewegingen in twee of drie dimensies.
 	
-	Om het ons gemakkelijk te maken, zullen we in dit hoofdstuk enkel werken met de getalcomponenten van de vectoren. Dat gaat omdat we steeds in \'e\'en dimensie werken en de eenheidsvector dan steeds gelijk blijft. Als we $v_x$ kennen, vinden we direct de vectorcomponent volgens de $x$-as met $\vec{v}_x=v_x\cdot\vec{e}_x$. Bovendien kunnen we de index $x$ ook weglaten. We weten dat het steeds over de $x$-as gaat.
+
 	
+	Om het ons gemakkelijk te maken, zullen we in dit hoofdstuk enkel werken met de getalcomponenten van de vectoren.
+	Dat gaat omdat we steeds in één dimensie werken en de eenheidsvector dan steeds gelijk blijft.
+	Als we $v_x$ kennen, vinden we direct de vectorcomponent volgens de $x$-as met $\vec{v}_x=v_x\cdot\vec{e}_x$.
+	Bovendien kunnen we de index $x$ ook weglaten.
+	We weten dat het steeds over de $x$-as gaat.
+		
 	
-	\footnote{In de fysica gebruiken we de wiskunde als `taal' om de wetmatigheden van de natuur in uit te drukken. Wiskundige variabelen en objecten zoals functies krijgen nu een fysische betekenis. $x(t)$ is dus niets anders dan een functie $f(x)$ of $y(x)$ zoals je die in wiskunde kent. Alleen nemen wij nu niet voor de onafhankelijke variabele het symbool $x$ maar het symbool $t$ omdat deze symbool moet staan voor de tijd. En voor het symbool $f$ gebruiken wij nu het symbool $x$ omdat de beeldwaarden van de functie nu als betekenis een positie op een coördinaatas hebben.}
+	\footnote{In de fysica gebruiken we de wiskunde als `taal' om de wetmatigheden van de natuur in uit te drukken.
+	Wiskundige variabelen en objecten zoals functies krijgen nu een fysische betekenis.
+	$x(t)$ is dus niets anders dan een functie $f(x)$ of $y(x)$ zoals je die in wiskunde kent.
+	Alleen nemen wij nu niet voor de onafhankelijke variabele het symbool $x$ maar het symbool $t$ omdat het symbool moet staan voor de tijd.
+	En voor het symbool $f$ of \(y\) gebruiken wij nu het symbool $x$ omdat de beeldwaarden van de functie nu als betekenis een positie op een coördinaatsas hebben.}
+	
 	
 \end{document}
