--- a/kinematica/1dim_ERB.tex
+++ b/kinematica/1dim_ERB.tex
@@ -37,70 +37,65 @@ waarbij $x_0=x(t_0)$ de coördinaat op het tijdstip $t_0$ is. Als $t_0=0$ dan ve
 x(t)&=&x_0+vt
 \end{eqnarray}
 
-\end{theorem}
-
 De snelheid $v$ is gelijk aan de beginsnelheid $v_0=v(t_0)$ omdat in een ERB de snelheid constant is. De snelheidsfunctie is $v(t)=v$ en de versnellingsfunctie is $a(t)=0$.
-
 
 \begin{image}
 	
     \begin{tikzpicture}
-		% ====== position vs Time (v > 0) ======
 		\begin{scope}[shift={(0,4)}]
-			% axes
 			\draw[->] (0,0) -- (4,0) node[right] {$t$};
 			\draw[->] (0,-1.5) -- (0,2.5) node[above] {$x$};
-			% lines
+
 			\draw[dashed] (0,1) -- (3.5,2.5);
 			\draw[thick]  (0,0) -- (3.5,1.5);
 			\draw[dashed] (0,-1) -- (3.5,0.5);
-			% labels
-			\node at (0.5,1.3) {$x_0>0$};
-			\node at (0.5,0.0) {$x_0=0$};
-			\node at (0.5,-1.0) {$x_0<0$};
+
+			\node[left] at (0,1) {$x_0>0$};
+			\node[left] at (0,0) {$x_0=0$};
+			\node[left] at (0,-1) {$x_0<0$};
 		\end{scope}
 			
-		% ====== position vs Time (v < 0) ======
 		\begin{scope}[shift={(6,5)}]
-				% axes
-				\draw[->] (0,0) -- (4,0) node[right] {$t$};
+
+			\draw[->] (0,0) -- (4,0) node[right] {$t$};
 				\draw[->] (0,-2.5) -- (0,1.5) node[above] {$x$};
-				% lines
+
 				\draw[dashed] (0,1) -- (3.5,-0.5);
 				\draw[thick]  (0,0) -- (3.5,-1.5);
 				\draw[dashed] (0,-1) -- (3.5,-2.5);
-				% labels
-				\node at (0.5,1.0) {$x_0>0$};
-				\node at (0.5,0.0) {$x_0=0$};
-				\node at (0.5,-1.0) {$x_0<0$};
+
+				\node[left] at (0,1) {$x_0>0$};
+				\node[left] at (0,0) {$x_0=0$};
+				\node[left] at (0,-1) {$x_0<0$};
 		\end{scope}
 	
-		% ====== velocity vs Time (v > 0) ======
 		\begin{scope}[shift={(0,0)}]
-			% axes
+
 			\draw[->] (0,0) -- (4,0) node[right] {$t$};
 			\draw[->] (0,-1) -- (0,1.2) node[above] {$v$};
-			% constant acceleration
+
 			\draw[thick] (0,0.6) -- (3.5,0.6);
-			% label
+
 			\node at (2,0.8) {$v>0$};
 		\end{scope}
 		
-		% ====== velocity vs Time (v < 0) ======
 		\begin{scope}[shift={(6,0)}]
-			% axes
+
 			\draw[->] (0,0) -- (4,0) node[right] {$t$};
 			\draw[->] (0,-1.2) -- (0,1) node[above] {$v$};
-			% constant acceleration
+
 			\draw[thick] (0,-0.6) -- (3.5,-0.6);
-			% label
+
 			\node at (2,-0.8) {$v<0$};
 		\end{scope}
 		
 	\end{tikzpicture}
 
 \end{image}
-\captionof{figure}{Grafieken van een ERB}
+\captionof{figure}{Grafieken van de ERB}
+
+
+\end{theorem}
 
 
 
