--- a/kinematica/1dim_EVRB_calculus.tex
+++ b/kinematica/1dim_EVRB_calculus.tex
@@ -20,11 +20,11 @@ Voor een constante versnelling is de snelheid in functie van de tijd een lineair
 
 
 \begin{remark}
-	Strikt genomen wordt hier iets over het hoofd gezien. 
-	A priori zou het immers kunnen dat er nog andere functies dan lineaire functies zijn waarvoor de afgeleide een constante functie is. 
-	Dat is echter niet het geval. 
-	Het bewijs hiervan zie je later dit jaar in het vak wiskunde. 
-	Je bewijst dat alle mogelijke functies die in aanmerking komen slechts op een constante na aan elkaar gelijk zijn. 
+Strikt genomen wordt hier iets over het hoofd gezien. 
+A priori zou het immers kunnen dat er nog andere functies dan lineaire functies zijn waarvoor de afgeleide een constante functie is. 
+Dat is echter niet het geval. 
+Het bewijs hiervan zie je later dit jaar in het vak wiskunde. 
+Je bewijst dat alle mogelijke functies die in aanmerking komen slechts op een constante na aan elkaar gelijk zijn. 
 \end{remark}
 
 Uit het snelheidsverloop kan je de plaats afleiden. 
@@ -68,6 +68,118 @@ v(t)&=&v_0+at
 \end{array}
 \]
 Hierin is $x_0$ de \textit{beginpositie} en $v_0$ de \textit{beginsnelheid}. Ze worden bepaald door de \textit{beginvoorwaarden} of \textit{randvoorwaarden}.
+
+
+\begin{image}[0.5 \textwidth]
+	\begin{tikzpicture}
+		\begin{scope}[shift={(0,8)}]
+			\def\ymax{3}
+		
+			\draw[->] (0,0) -- (4,0) node[right] {$t$};
+			\draw[->] (0,-1) -- (0, \ymax ) node[above] {$x$};
+		
+			% geval v0 = 1
+			\pgfmathsetmacro{\tmaxA}{-1 + sqrt(1^2 + 2*\ymax)}
+			\draw[dashed, domain=0:\tmaxA, smooth] plot (\x,{0.5*\x*\x + 1*\x});
+		
+			% geval v0 = 0
+			\pgfmathsetmacro{\tmaxB}{sqrt(2*\ymax)}
+			\draw[thick, domain=0:\tmaxB, smooth] plot (\x,{0.5*\x*\x});
+		
+			% geval v0 = -1
+			\pgfmathsetmacro{\tmaxC}{1 + sqrt((-1)^2 + 2*\ymax)}
+			\draw[dashed, domain=0:\tmaxC, smooth] plot (\x,{0.5*\x*\x - 1*\x});
+		
+			% labels
+			\node at (1.0,3.0) {$v_0>0$};
+			\node at (2.0,1.0) {$v_0=0$};
+			\node at (1.0,-0.7) {$v_0<0$};
+		\end{scope}
+	
+		\begin{scope}[shift={(6,10)}]
+			% set minimum y value (negative cutoff)
+			\def\ymin{-3}
+		
+			% axes
+			\draw[->] (0,0) -- (4,0) node[right] {$t$};
+			\draw[->] (0,\ymin) -- (0,1) node[above] {$x$};
+		
+			% case v0 = -1
+			\pgfmathsetmacro{\tmaxA}{-1 + sqrt((-1)^2 - 2*\ymin)} % = v0 + sqrt(v0^2 - 2*ymin)
+			\draw[dashed, domain=0:\tmaxA, smooth] plot (\x,{-0.5*\x*\x - 1*\x});
+		
+			% case v0 = 0
+			\pgfmathsetmacro{\tmaxB}{sqrt(-2*\ymin)}
+			\draw[thick, domain=0:\tmaxB, smooth] plot (\x,{-0.5*\x*\x});
+		
+			% case v0 = 1
+			\pgfmathsetmacro{\tmaxC}{1 + sqrt(1 - 2*\ymin)}
+			\draw[dashed, domain=0:\tmaxC, smooth] plot (\x,{-0.5*\x*\x + 1*\x});
+		
+			% labels
+			\node at (1.0,0.7) {$v_0<0$};
+			\node at (1.8,-0.7) {$v_0=0$};
+			\node at (0.6,-2.2) {$v_0>0$};
+		\end{scope}
+	
+		% ====== Velocity vs Time (a > 0) ======
+		\begin{scope}[shift={(0,4)}]
+			% axes
+			\draw[->] (0,0) -- (4,0) node[right] {$t$};
+			\draw[->] (0,-1.5) -- (0,2.5) node[above] {$v$};
+			% lines
+			\draw[dashed] (0,1) -- (3.5,2.5);
+			\draw[thick]  (0,0) -- (3.5,1.5);
+			\draw[dashed] (0,-1) -- (3.5,0.5);
+			% labels
+			\node[left] at (0,1) {$v_0>0$};
+			\node[left] at (0,0) {$v_0=0$};
+			\node[left] at (0,-1) {$v_0<0$};
+		\end{scope}
+			
+		% ====== Velocity vs Time (a < 0) ======
+		\begin{scope}[shift={(6,5)}]
+				% axes
+				\draw[->] (0,0) -- (4,0) node[right] {$t$};
+				\draw[->] (0,-2.5) -- (0,1.5) node[above] {$v$};
+				% lines
+				\draw[dashed] (0,1) -- (3.5,-0.5);
+				\draw[thick]  (0,0) -- (3.5,-1.5);
+				\draw[dashed] (0,-1) -- (3.5,-2.5);
+				% labels
+				\node[left] at (0,1) {$v_0>0$};
+				\node[left] at (0,0) {$v_0=0$};
+				\node[left] at (0,-1) {$v_0<0$};
+		\end{scope}
+	
+		% ====== Acceleration vs Time (a > 0) ======
+		\begin{scope}[shift={(0,0)}]
+			% axes
+			\draw[->] (0,0) -- (4,0) node[right] {$t$};
+			\draw[->] (0,-1) -- (0,1.2) node[above] {$a$};
+			% constant acceleration
+			\draw[thick] (0,0.6) -- (3.5,0.6);
+			% label
+			\node at (2,0.8) {$a>0$};
+		\end{scope}
+		
+		% ====== Acceleration vs Time (a < 0) ======
+		\begin{scope}[shift={(6,0)}]
+			% axes
+			\draw[->] (0,0) -- (4,0) node[right] {$t$};
+			\draw[->] (0,-1.2) -- (0,1) node[above] {$a$};
+			% constant acceleration
+			\draw[thick] (0,-0.6) -- (3.5,-0.6);
+			% label
+			\node at (2,-0.8) {$a<0$};
+		\end{scope}
+		
+	\end{tikzpicture}
+	\end{image}
+	\captionof{figure}{Grafieken van de EVRB}
+	
+	
+
 \end{theorem}	
 
 Indien de beschrijving van de beweging niet op $t=0$ start, maar op een gegeven tijdstip $t_0$, dan wordt in de beschrijving $t$ vervangen door $\Delta t= t-t_0$, de verstreken tijd vanaf het begintijdstip $t_0$. De plaatsfunctie en zijn afgeleide worden dan een klein beetje ingewikkelder:
@@ -135,118 +247,6 @@ Gebruik de definitie voor gemiddelde snelheid en bereken de verplaatsing met de 
 
 
 
-
-\begin{image}[0.5 \textwidth]
-	\begin{tikzpicture}
-		\begin{scope}[shift={(0,8)}]
-			% set maximum y value
-			\def\ymax{3}
-		
-			% axes
-			\draw[->] (0,0) -- (4,0) node[right] {$t$};
-			\draw[->] (0,-1) -- (0, \ymax ) node[above] {$x$};
-		
-			% case v0 = 1
-			\pgfmathsetmacro{\tmaxA}{-1 + sqrt(1^2 + 2*\ymax)}
-			\draw[dashed, domain=0:\tmaxA, smooth] plot (\x,{0.5*\x*\x + 1*\x});
-		
-			% case v0 = 0
-			\pgfmathsetmacro{\tmaxB}{sqrt(2*\ymax)}
-			\draw[thick, domain=0:\tmaxB, smooth] plot (\x,{0.5*\x*\x});
-		
-			% case v0 = -1
-			\pgfmathsetmacro{\tmaxC}{1 + sqrt((-1)^2 + 2*\ymax)}
-			\draw[dashed, domain=0:\tmaxC, smooth] plot (\x,{0.5*\x*\x - 1*\x});
-		
-			% labels
-			\node at (1.0,3.0) {$v_0>0$};
-			\node at (2.0,1.0) {$v_0=0$};
-			\node at (2.0,-0.5) {$v_0<0$};
-		\end{scope}
-	
-		\begin{scope}[shift={(6,10)}]
-			% set minimum y value (negative cutoff)
-			\def\ymin{-3}
-		
-			% axes
-			\draw[->] (0,0) -- (4,0) node[right] {$t$};
-			\draw[->] (0,\ymin) -- (0,1) node[above] {$x$};
-		
-			% case v0 = -1
-			\pgfmathsetmacro{\tmaxA}{-1 + sqrt((-1)^2 - 2*\ymin)} % = v0 + sqrt(v0^2 - 2*ymin)
-			\draw[dashed, domain=0:\tmaxA, smooth] plot (\x,{-0.5*\x*\x - 1*\x});
-		
-			% case v0 = 0
-			\pgfmathsetmacro{\tmaxB}{sqrt(-2*\ymin)}
-			\draw[thick, domain=0:\tmaxB, smooth] plot (\x,{-0.5*\x*\x});
-		
-			% case v0 = 1
-			\pgfmathsetmacro{\tmaxC}{1 + sqrt(1 - 2*\ymin)}
-			\draw[dashed, domain=0:\tmaxC, smooth] plot (\x,{-0.5*\x*\x + 1*\x});
-		
-			% labels
-			\node at (1.0,0.7) {$v_0<0$};
-			\node at (2.0,-0.7) {$v_0=0$};
-			\node at (2.8,-2.2) {$v_0>0$};
-		\end{scope}
-	
-		% ====== Velocity vs Time (a > 0) ======
-		\begin{scope}[shift={(0,4)}]
-			% axes
-			\draw[->] (0,0) -- (4,0) node[right] {$t$};
-			\draw[->] (0,-1.5) -- (0,2.5) node[above] {$v$};
-			% lines
-			\draw[dashed] (0,1) -- (3.5,2.5);
-			\draw[thick]  (0,0) -- (3.5,1.5);
-			\draw[dashed] (0,-1) -- (3.5,0.5);
-			% labels
-			\node at (0.5,1.3) {$v_0>0$};
-			\node at (0.5,0.0) {$v_0=0$};
-			\node at (0.5,-1.0) {$v_0<0$};
-		\end{scope}
-			
-		% ====== Velocity vs Time (a < 0) ======
-		\begin{scope}[shift={(6,5)}]
-				% axes
-				\draw[->] (0,0) -- (4,0) node[right] {$t$};
-				\draw[->] (0,-2.5) -- (0,1.5) node[above] {$v$};
-				% lines
-				\draw[dashed] (0,1) -- (3.5,-0.5);
-				\draw[thick]  (0,0) -- (3.5,-1.5);
-				\draw[dashed] (0,-1) -- (3.5,-2.5);
-				% labels
-				\node at (0.5,1.0) {$v_0>0$};
-				\node at (0.5,0.0) {$v_0=0$};
-				\node at (0.5,-1.0) {$v_0<0$};
-		\end{scope}
-	
-		% ====== Acceleration vs Time (a > 0) ======
-		\begin{scope}[shift={(0,0)}]
-			% axes
-			\draw[->] (0,0) -- (4,0) node[right] {$t$};
-			\draw[->] (0,-1) -- (0,1.2) node[above] {$a$};
-			% constant acceleration
-			\draw[thick] (0,0.6) -- (3.5,0.6);
-			% label
-			\node at (2,0.8) {$a>0$};
-		\end{scope}
-		
-		% ====== Acceleration vs Time (a < 0) ======
-		\begin{scope}[shift={(6,0)}]
-			% axes
-			\draw[->] (0,0) -- (4,0) node[right] {$t$};
-			\draw[->] (0,-1.2) -- (0,1) node[above] {$a$};
-			% constant acceleration
-			\draw[thick] (0,-0.6) -- (3.5,-0.6);
-			% label
-			\node at (2,-0.8) {$a<0$};
-		\end{scope}
-		
-	\end{tikzpicture}
-	\end{image}
-	\captionof{figure}{Grafieken van de EVRB}
-	
-	
 
 
 
