--- a/SPC/semester1.tex
+++ b/SPC/semester1.tex
@@ -2,10 +2,8 @@
 
 \begin{document}
 %	\setcounter{tocdepth}{2}
-    \xmtitle{Kinematica: ééndimensionale bewegingen}{}  
+    \xmtitle{Semester  1}{}  
  
-
-
 
 \setcounter{part}{-1}
 
