--- a/kinematica/1dim_verticale_worp.tex
+++ b/kinematica/1dim_verticale_worp.tex
@@ -115,7 +115,7 @@ De gemiddelde snelheid vinden we door de totale afgelegde weg te delen door de t
 \end{oplossing}
 \end{exercise}
 
-\begin{expandable}{xmyoutube}{Een universiteitscollege over de leerstof van dit hoofdstuk.}
+\begin{expandable}{xmdonothing}{Een universiteitscollege over de leerstof van dit hoofdstuk.}
 	\youtube{q9IWoQ199_o}
 \end{expandable}
 
