--- a/vectoren/vectoren_begrip.tex
+++ b/vectoren/vectoren_begrip.tex
@@ -35,7 +35,7 @@ De plaats waarop de vector van toepassing is, noemt men het aangrijpingspunt van
 
 
 
-\begin{expandable}{xmyoutube}{Een universiteitscollege over dit hoofdstuk}
+\begin{expandable}{xmdonothing}{Een universiteitscollege over dit hoofdstuk}
     \youtube{0na1JdPE_JY}
 \end{expandable}
 
