--- a/kinematica/basis_intro.tex
+++ b/kinematica/basis_intro.tex
@@ -104,7 +104,7 @@ Sommige van deze vragen worden behandeld in de kinematica, andere in de dynamica
 % - hoe zit het met de verandering van de snelheid? 
 \end{denkvraag*} \nl
 
-\begin{expandable}{xmyoutube}{Een universiteitscollege over deze leerstof}
+\begin{expandable}{xmdonothing}{Een universiteitscollege over deze leerstof}
     \youtube{q9IWoQ199_o}
 \end{expandable}
 
