--- a/xmPreamble.tex
+++ b/xmPreamble.tex
@@ -1385,7 +1385,7 @@ Dit kan gaan over:
 
 % To be checked: to get \begin{expandable}{xmyoutue} work
 % COuld/should perhaps be 'xmdonothing' or so? Or expandable to be adapted
-\DeclareDocumentEnvironment{xmyoutube}{}{}{}{}
+\DeclareDocumentEnvironment{xmdonothing}{}{}{}{}
 
 \ifdefined\isXourse
 \else
