--- a/kinematica/2dim_onafhankelijkheidsbeginsel.tex
+++ b/kinematica/2dim_onafhankelijkheidsbeginsel.tex
@@ -14,8 +14,8 @@
 	\end{center}
 \end{denkvraag*}
 
-\begin{definition}{onafhankelijkheidsbeginsel}
-	Het onafhankelijkheidsbeginsel stelt dat een beweging in een bepaalde richting geen invloed uitoefent op de beweging in een andere richting. 
+\begin{definition}{}
+	Het \textbf{onafhankelijkheidsbeginsel} stelt dat een beweging in een bepaalde richting geen invloed uitoefent op de beweging in een andere richting. 
 \end{definition}
 
 Als gevolg kunnen we de beweging beschrijven als een samenstelling van een horizontale en een verticale beweging, onafhankelijk van elkaar.
