--- a/xmPrintstyle.sty
+++ b/xmPrintstyle.sty
@@ -868,7 +868,8 @@
 \let\c@remark\relax
 \let\endremark\relax
 \makeatother
-% \newtheorem{remark}{\nlen{Opmerking}{Remark}}
+\newtheorem{remark}{\nlen{Opmerking}{Remark}}
+
 % \newtheoremstyle{remarkNoDot}   % name
 %   {3pt}                         % Space above
 %   {3pt}                         % Space below
@@ -880,7 +881,7 @@
 %   {}                             % Theorem head spec
 
 % \theoremstyle{remarkNoDot}
-\newtheorem{remark}{}
+% \newtheorem{remark}{}
 %\theoremstyle{definition} % Bold titels
 
 \renewcommand{\theremark}{\theoremtitle{remark}} % titel instellen
