uit commentaar ECB

--- a/SPC/semester1.tex
+++ b/SPC/semester1.tex
@@ -48,7 +48,7 @@
 
 \activitychapter{../kinematica/2dim_intro.tex}
 \activitychapter{../kinematica/2dim_onafhankelijkheidsbeginsel.tex}
-%activitychapter{../kinematica/2dim_eenparige_cirkelbeweging.tex}    % causes next file to fail compilation with 'Missing {}' 
+\activitychapter{../kinematica/2dim_eenparige_cirkelbeweging.tex}    % causes next file to fail compilation with 'Missing {}' 
 \activitychapter{../kinematica/2dim_horizontale_worp.tex}
 
 
